# Copyright (c) 2025 Felix Kahle.
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[package]
name = "berth_alloc_solver"
version = "0.1.0"
edition.workspace = true

[dependencies]
berth_alloc_core = { path = "../berth-alloc-core" }
berth_alloc_model = { path = "../berth-alloc-model" }
num-traits = "0.2.19"
rand = "0.9.2"
rangemap = "1.6.0"
rand_chacha = "0.9.0"
rayon = "1.11.0"
parking_lot = "0.12.5"

[dependencies.tracing]
version = "0.1.41"
default-features = false
features = ["std", "attributes"]

[dev-dependencies]
static_assertions = "1.1.0"
